syntax = "proto3";

package ring;

import "google/protobuf/timestamp.proto";
import "shared.proto";

option go_package = "github.com/smartcontractkit/chainlink-common/pkg/workflows/ring/pb";

message Observation {
  map<uint32, ShardStatus> shard_status = 1; // shard_id -> status
  repeated string workflow_ids = 2;
  google.protobuf.Timestamp now = 3;
  uint32 want_shards = 4; // from ArbiterScaler.Status()
}

message WorkflowRoute {
  uint32 shard = 1;
}

message Transition {
  uint32 want_shards = 1;
  uint32 last_stable_count = 2;
  google.protobuf.Timestamp changes_safe_after = 3;
}

message RoutingState {
  uint64 id = 1;
  oneof state {
    Transition transition = 2;
    uint32 routable_shards = 3;
  }
}

message Outcome {
  RoutingState state = 1; // used internally for ring plugin
  map<string, WorkflowRoute> routes = 2; // used by consumers to route requests to the appropriate shard
}

